--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,41 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
-
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+<div class="card column container is-one-third">
+  <header class="card-header has-background-grey-lighter">
+    <p class="card-header-title is-centered">
+      Login
+    </p>
+  </header>
+  <form class="form login-form card-content">
+    <div class="form-group field">
+      {{!-- <label for="email-login">email:</label>
+      <input class="form-input" type="text" id="email-login" /> --}}
+      <label class="label">Email</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input form-input" type="text" id="email-login" placeholder="example@company.com">
+        <span class="icon is-large is-left">
+          <ion-icon size="large" name="mail"></ion-icon>
+        </span>
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group field">
+      {{!-- <label for="password-login">password:</label>
+      <input class="form-input" type="password" id="password-login" /> --}}
+      <label class="label">Password</label>
+      <div class="control has-icons-left has-icons-right">
+        <input class="input form-input" type="text" id="password-login" placeholder="************">
+        <span class="icon is-left">
+          <ion-icon size="large" name="lock-closed"></ion-icon>
+        </span>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
+    </div>
+    {{!-- <div class="form-group">
+      <button class="btn btn-primary" type="submit">login</button>
+    </div> --}}
+    <div class="control">
+      <button class="button has-background-grey-light">Submit</button>
+    </div>
+     <p>
+      New to Tech Blogger? <a class="is-link" href="/signup">Sign Up</a>
+    </p>
+  </form>
+  <script src="/js/login.js"></script>
 </div>
-
-<script src="./js/login.js"></script>
