added search_form handlebar functionallity

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,9 @@
         <a class="navbar-item" href="/">
           Home
         </a>
+        <a class="navbar-item" href="/search">
+          Search
+        </a>
 
         {{#if logged_in}}
         <a class="navbar-item" href="/profile">
