attempted to link search hb with script

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -84,4 +84,6 @@
           <label>Calories</label>
           <input name="calories" id="calories" title="calories">
           <button type="submit" name="search-btn" id="search">Search</button>
-        </form>
+</form>
+
+<script src="/js/search.js"></script>
