--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -86,4 +86,10 @@
           <button type="submit" name="search-btn" id="search">Search</button>
 </form>
 
+{{#each hits.length}}
+
+ 
+
+{{/each }}
+
 <script src="/js/search.js"></script>
