added recipe seeds, favorite seeds and api functionality

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -86,4 +86,14 @@
           <button type="submit" name="search-btn" id="search">Search</button>
 </form>
 
+{{!-- {{#each recipies as |recipe|}}
+{{> recipe_details}}
+Recipe
+{{/each}} --}}
+
+{{test}}
+
+{{!-- {{recipies}} --}}
+
+
 <script src="/js/search.js"></script>
