the API call is showing on search page

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -86,6 +86,8 @@
           <button type="submit" name="search-btn" id="search">Search</button>
 </form>
 
+<div id="showRecipe"></div>
+
 {{#each hits.length}}
 
  
