--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,31 @@
 homepage
+
+
+    <section id="carousel">
+        <div id="slider">
+            <div class="card">
+                <div class="card-image">
+                    <figure class="image is-16by9 is-covered">
+                        <img src="/images/image1.jpg" alt="image1" />
+                    </figure>
+                </div>   
+            </div>
+            <div class="card ">
+                <div class="card-image">
+                    <figure class="image is-16by9 is-covered">
+                        <img src="/images/image2.jpg" alt="image2" />
+                    </figure>
+                </div>
+            </div>
+            <div class="card ">
+                <div class="card-image">
+                    <p class="image is-16by9 is-covered">
+                        <img src="/images/image3.jpg" alt="image3" />
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+ <script src="/public/js/carousel.js"></script>
