--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,22 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
-}
-
-.no-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
+header {
   text-decoration: none;
-  font-size: 100%;
+  color: #D5D9D0;
+  background-color: #35495a;
 }
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
+body {
+  color: #4C6473;
+  background-color: #B5BFAA;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
+
+p { 
+  color: #344859, #4C6473, #94A6A6, #B5BFAA, #D5D9D0;
 }
+
+
+
+
