added changes made to routes and search.js

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -86,12 +86,12 @@
           <button type="submit" name="search-btn" id="search">Search</button>
 </form>
 
-<div id="showRecipe"></div>
+<div id="results-container"></div>
 
-{{#each hits.length}}
+{{!-- {{#each hits.length}}
 
  
 
-{{/each }}
+{{/each }} --}}
 
 <script src="/js/search.js"></script>
