--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,9 @@
-header {
-  text-decoration: none;
-  color: #D5D9D0;
-  background-color: #35495a;
+:root { 
+  --darkblue: #344859; 
+  --lighterblue: #4C6473; 
+  --seafoam: #94A6A6; 
+  --lightgreen: #B5BFAA; 
+  --lightest: #D5D9D0;
 }
 
 body {
@@ -12,11 +14,28 @@ body {
   flex-direction: column;
 }
 
-
-p { 
-  color: #344859, #4C6473, #94A6A6, #B5BFAA, #D5D9D0;
+header {
+  text-decoration: none;
+  color: #D5D9D0;
+  background-color: #35495a;
 }
 
+.navbar-item {
+  font-size: 24px;
+  color: #D5D9D0;
+  text-decoration: none;
+}
 
+.navbar-item:hover {
+  background: #35495A !important;
+  text-decoration: none;
+}
+
+footer {
+  margin-bottom: 0px;
+  color: #D5D9D0;
+  background-color: #B5BFAA;
+
+}
 
 
