--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Menu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
     <link rel="stylesheet" href="/css/style.css">
     
   </head>
 
   <body>
     <section class="hero">
-      <div class="hero-body flex-column">
+      <div class="hero-header flex-column">
         <header>
-          <div class="navbar-menu" id="nav-links">
+          <div class="navbar-menu mx-6" id="nav-links">
             <nav class="navbar-start">
-            <a href="/" class="navbar-item">home page</a>
+            <a href="/" class="navbar-item">homepage</a>
             </nav>
-            <img class="navbar-item is-horizontal-center" src="/img/my-menu-logo-02.png" alt="site logo">
+            <img class="navbar-item is-horizontal-center mt-3 my-3" src="/img/my-menu-logo-02.png" alt="site logo">
             <nav class="navbar-end">
               <a href="/profile" class="navbar-item">my diet</a>
               <a href="#" class="navbar-item">search</a>
@@ -41,7 +42,7 @@
           {{{ body }}}
         </main>
         <footer>
-          <div class="content has-text-centered">
+          <div class="has-text-centered b-4">
             <p>
               Created by <a href="https://github.com/0zrk23">Gustavo Carrillo</a>, 
               <a href="https://github.com/kfarshchian">Kameron Farshchian</a> and 
