fixed minor stuff

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,14 @@
-my diet
+<section>
+<div class="row" id="welcome">
+  <div class="col-auto">
+    <h2>Welcome, {{username}}!</h2>
+  </div>
+</div>
+<div class="row" id="favorite-recipe">
+<p>A delicious collection of of your favorite recipes. </p>
+</div>
+
+</section>
+
+
+<script src="./js/profile.js"></script>
