--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 homepage
 
 
-    <section id="carousel">
+    <section id="carousel" class="column is-half is-offset-one-quarter">
         <div id="slider">
             <div class="card">
                 <div class="card-image">
