main links and homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,34 +1,33 @@
-homepage
-
-
-    <section id="carousel">
-        <div id="slider">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image is-16by9 is-covered">
-                        <img src="/images/image1.jpg" alt="image1" />
-                    </figure>
-                </div>   
-            </div>
-            <div class="card ">
-                <div class="card-image">
-                    <figure class="image is-16by9 is-covered">
-                        <img src="/images/image2.jpg" alt="image2" />
-                    </figure>
-                </div>
-            </div>
-            <div class="card ">
-                <div class="card-image">
-                    <p class="image is-16by9 is-covered">
-                        <img src="/images/image3.jpg" alt="image3" />
-                    </p>
-                </div>
-            </div>
+<div class="tile is-parent is-rounded" id="carousel">
+  <div class="tile is-child is-vertical-center" id="slider">
+        <div class="card">
+            <div class="card-image">
+              <figure class="image is-16by9 is-covered">
+                <img src="/images/image1.jpg" alt="image1" />
+              </figure>
+            </div>   
         </div>
+        <div class="card ">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered">
+              <img src="/images/image2.jpg" alt="image2" />
+            </figure>
+            </div>
+          </div>
+          <div class="card ">
+            <div class="card-image">
+              <p class="image is-16by9 is-covered">
+                <img src="/images/image3.jpg" alt="image3" />
+              </p>
+            </div>
+          </div>
+      </div>
     </section>
+  </div>
+</div>
+<script src="/public/js/carousel.js"></script>
 
 
- <script src="/public/js/carousel.js"></script>
 {{!-- <div class="tile is-parent">
 <div class="tile is-child is-vertical is-2">
   <div id="suggestedRecipe" class="is-child box">
@@ -66,12 +65,6 @@ homepage
   </div>
 </div>
 </div>   --}}
-
-<div class="tile is-parent">
-<figure class="is-child level-item is-horizontal-center my-6">
-<img class="box" src="/img/placeholder.jpg" alt="place-holder img">
-</figure>
-</div>
 
 <div class="tile is-parent">
 <h3 class="is-child is-size-3 has-text-centered mx-6">
