--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Menu</title>
   <link rel="stylesheet" href="/css/bulma.css">
-  <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/carouselstyle.css">
+  <link rel="stylesheet" href="/css/carouselstyle.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" />
+  <link rel="stylesheet" href="/css/style.css">
   
   
 </head>
