--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,34 +1,34 @@
-<div class="tile is-parent is-rounded" id="carousel">
-  <div class="tile is-child is-vertical-center" id="slider">
+<div class="columns is-centered">
+  <div class="columns is-half">
+    <div class="tile is-parent mt-6" id="carousel">
+      <div class="tile is-child" id="slider">
         <div class="card">
-            <div class="card-image">
-              <figure class="image is-16by9 is-covered">
-                <img src="/images/image1.jpg" alt="image1" />
-              </figure>
-            </div>   
-        </div>
-        <div class="card ">
           <div class="card-image">
             <figure class="image is-16by9 is-covered">
-              <img src="/images/image2.jpg" alt="image2" />
+              <img src="/img/image1.jpg" alt="image1" />
             </figure>
-            </div>
           </div>
-          <div class="card ">
-            <div class="card-image">
-              <p class="image is-16by9 is-covered">
-                <img src="/images/image3.jpg" alt="image3" />
-              </p>
-            </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <figure class="image is-16by9 is-covered">
+              <img src="/img/image2.jpg" alt="image2" />
+            </figure>
           </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <p class="image is-16by9 is-covered">
+              <img src="/img/image3.jpg" alt="image3" />
+            </p>
+          </div>
+        </div>
       </div>
-    </section>
+    </div>
   </div>
 </div>
-<script src="/public/js/carousel.js"></script>
 
-
-{{!-- <div class="tile is-parent">
+{{! <div class="tile is-parent">
 <div class="tile is-child is-vertical is-2">
   <div id="suggestedRecipe" class="is-child box">
     <p class="subtitle has-text-centered is-3">Suggested Recipes</p>
@@ -64,24 +64,26 @@
       </p>
   </div>
 </div>
-</div>   --}}
+</div>   }}
 
-<div class="tile is-parent">
-<h3 class="is-child is-size-3 has-text-centered mx-6">
-  <span class="icon-text">
-    <i class="fas fa-utensils"></i>
-  </span>
-  Welcome to My Menu! A searchable site to help you find and save an array of 
-  recipes for your favorite appetizers, main dishes, desserts and more. 
-  Search recipes for your specific preferences: whether that be cuisine, allergies, 
-  number of calories, specific diets and/or health related issues. Nutritional 
-  information helping you utilize food for growth, health, and medicine.</h3>
+<div class="tile is-parent my-6">
+  <h3 class="is-child is-size-3 has-text-centered mx-6">
+    <span class="icon-text">
+      <i class="fas fa-utensils"></i>
+    </span>
+    Welcome to My Menu! A searchable site to help you find and save an array of
+    recipes for your favorite appetizers, main dishes, desserts and more. Search
+    recipes for your specific preferences: whether that be cuisine, allergies,
+    number of calories, specific diets and/or health related issues. Nutritional
+    information helping you utilize food for growth, health, and medicine.</h3>
 </div>
 
-<div class="tile is-parent">
-  <button class="tile is-child box is-horizontal-center is-6">
-
-  </button>
+<div class="columns is-centered">
+  <div class="columns is-half">
+    <div class="tile is-parent">
+      <button class="tile is-child button is-large" type="submit" id="get-started-button">
+        Get Started
+      </button>
+    </div>
+  </div>
 </div>
-
-
