--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
             <img class="navbar-item is-horizontal-center mt-3 my-3" src="/img/my-menu-logo-02.png" alt="site logo">
             <nav class="navbar-end">
               <a href="/profile" class="navbar-item">my diet</a>
-              <a href="#" class="navbar-item">search</a>
+              <a href="/search" class="navbar-item">search</a>
             
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
@@ -45,7 +45,7 @@
           {{{ body }}}
         </main>
         <footer>
-          <div class="has-text-centered b-4">
+          <div class="has-text-centered b-4 my-6">
             <p>
               Created by <a href="https://github.com/0zrk23">Gustavo Carrillo</a>, 
               <a href="https://github.com/kfarshchian">Kameron Farshchian</a> and 
@@ -65,6 +65,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
+ <script src="/public/js/carousel.js"></script>
  <script>
         bulmaCarousel.attach('#slider', {
             slidesToScroll: 1,
