--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,8 +25,7 @@
             </nav>
             <img class="navbar-item is-horizontal-center mt-3 my-3" src="/img/my-menu-logo-02.png" alt="site logo">
             <nav class="navbar-end">
-              <a href="/profile" class="navbar-item">my diet</a>
-              <a href="#" class="navbar-item">search</a>
+              <a href="/search" class="navbar-item">search</a>
             
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
