--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="card column container is-one-third">
+<div class="card column mt-6" id="login-card">
   <header class="card-header has-background-grey-lighter">
     <p class="card-header-title is-centered">
       Login
