--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -82,7 +82,9 @@
   <div class="columns is-half">
     <div class="tile is-parent">
       <button class="tile is-child button is-large" type="submit" id="get-started-button">
+        <a href="/search">
         Get Started
+        </a>
       </button>
     </div>
   </div>
