--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="card column mt-6" id="login-card">
-  <header class="card-header has-background-grey-lighter">
+  <header class="card-header has-background-grey-lighter mt-3">
     <p class="card-header-title is-centered">
       Login
     </p>
