--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
-<div class="card column container is-one-third">
-  <header class="card-header has-background-grey-lighter">
+<div class="card column mt-6" id="signup-card">
+  <header class="card-header has-background-grey-lighter mt-3">
     <p class="card-header-title is-centered">
       Sign Up
     </p>
