--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -75,7 +75,7 @@
     recipes for your favorite appetizers, main dishes, desserts and more. Search
     recipes for your specific preferences: whether that be cuisine, allergies,
     number of calories, specific diets and/or health related issues. Nutritional
-    information helping you utilize food for growth, health, and medicine.</h3>
+    information helping you utilize your food for growth, health, and medicine.</h3>
 </div>
 
 <div class="columns is-centered">
