--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,8 +148,8 @@ footer {
 span{
   display: block;
   justify-content: center;
-  max-height: 300px;
-  max-width: 200px;
+  /* max-height: 300px;
+  max-width: 200px; */
 }
 p {
     word-wrap: break-word;
