--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,20 +21,19 @@
         <header>
           <div class="navbar-menu mx-6" id="nav-links">
             <nav class="navbar-start">
-            <a href="/" class="navbar-item">homepage</a>
+            <a href="/" class="navbar-item">Homepage</a>
             </nav>
 
               {{!-- need to center logo in navbar 2/13 10:00pm --}}
               <img class="has-text-centered" src="/img/my-menu-logo-02.png" alt="site logo">
-              <a href="/profile" class="navbar-item">my diet</a>
-              <a href="/search" class="navbar-item">search</a>
+              <a href="/search" class="navbar-item">Search</a>
             
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
-              <a class="navbar-item" href="/profile">profile</a> |
-              <button class="no-button navbar-item" id="logout">logout</button>
+              <a class="navbar-item" href="/profile">Profile</a> |
+              <button class="no-button navbar-item" id="logout">Logout</button>
               {{else}}
-              <a class="navbar-item" href="/login">login</a>
+              <a class="navbar-item" href="/login">Login</a>
               {{/if}}
 
             </nav>
