fix delete button

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -44,7 +44,7 @@
                   Link to Recipe: <span id="url">{{url}}</span>
               </p>
           </div>
-          <form class="delete-form card-footer-item">
+          <form class="delete-form card-footer-item" id="deletebtn">
               <button class="button is-danger is-outlined" favorite-id='{{id}}'>
                   <span favorite-id='{{id}}'>Delete</span>
                   <span class="icon is-small" favorite-id='{{id}}'>
