--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -34,7 +34,7 @@
       <button class="button has-background-grey-light">Submit</button>
     </div>
      <p>
-      New to Tech Blogger? <a class="is-link" href="/signup">Sign Up</a>
+      New to My Menu? <a class="is-link" href="/signup">Sign Up</a>
     </p>
   </form>
   <script src="/js/login.js"></script>
