bulma on profile page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,9 +26,11 @@ header {
   text-decoration: none;
 }
 
-.navbar-item:hover {
+.navbar-item:hover,
+#logout {
   background: #35495A !important;
   text-decoration: none;
+  border: none;
 }
 
 #carousel-container {
