--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,11 +1,11 @@
 <section>
 <div class="row" id="welcome">
   <div class="col-auto">
-    <h2>Welcome, {{username}}!</h2>
+    <h2 class="is-size-3">Welcome, {{username}}!</h2>
   </div>
 </div>
 <div class="row" id="favorite-recipe">
-<p>A delicious collection of of your favorite recipes. </p>
+<p class="is-size-4">A delicious collection of of your favorite recipes. </p>
 </div>
 
 </section>
