--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,12 @@
     <div class="form-group field">
       <label class="label">Username</label>
       <div class="control has-icons-left has-icons-right">
-        <input class="input form-input" type="text" id="username" placeholder="johndoe47">
+        <input
+          class="input form-input"
+          type="text"
+          id="username"
+          placeholder="johndoe47"
+        />
         <span class="icon is-large is-left">
           <ion-icon size="large" name="mail"></ion-icon>
         </span>
@@ -17,7 +22,12 @@
     <div class="form-group field">
       <label class="label">Email</label>
       <div class="control has-icons-left has-icons-right">
-        <input class="input form-input" type="text" id="email" placeholder="example@company.com">
+        <input
+          class="input form-input"
+          type="text"
+          id="email"
+          placeholder="example@company.com"
+        />
         <span class="icon is-large is-left">
           <ion-icon size="large" name="mail"></ion-icon>
         </span>
@@ -26,7 +36,12 @@
     <div class="form-group field">
       <label class="label">Password</label>
       <div class="control has-icons-left has-icons-right">
-        <input class="input form-input" type="text" id="password" placeholder="************">
+        <input
+          class="input form-input"
+          type="text"
+          id="password"
+          placeholder="************"
+        />
         <span class="icon is-left">
           <ion-icon size="large" name="lock-closed"></ion-icon>
         </span>
@@ -35,8 +50,10 @@
     <div class="control">
       <button class="button has-background-grey-light">Submit</button>
     </div>
-     <p>
-      Already a user? <a class="is-link" href="/login">Log In</a>
+    <br />
+    <p>
+      Already a user?
+      <a class="is-link" href="/login">Log In</a>
     </p>
   </form>
   <script src="/js/signup.js"></script>
