fixed delete btn

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -45,7 +45,7 @@
               </p>
           </div>
           <form class="delete-form card-footer-item">
-              <button class="button is-danger is-outlined" favorite-id='{{id}}'>
+              <button class="deleteBTN button is-danger is-outlined" favorite-id='{{id}}'>
                   <span favorite-id='{{id}}'>Delete</span>
                   <span class="icon is-small" favorite-id='{{id}}'>
                       <i class="fas fa-times" favorite-id='{{id}}'></i>
