--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
             
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
-              <a class="navbar-item" href="/profile">Profile</a> |
+              <a class="navbar-item" href="/profile">Profile</a> 
               <button class="no-button navbar-item" id="logout">Logout</button>
               {{else}}
               <a class="navbar-item" href="/login">Login</a>
