--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,9 @@
             </nav>
 
               {{!-- need to center logo in navbar 2/13 10:00pm --}}
-              <img class="has-text-centered" src="/img/my-menu-logo-02.png" alt="site logo">
+              <figure class="">
+                <img class="has-text-centered" src="/img/my-menu-logo-02.png" alt="site logo" id="site-logo">
+              </figure>
               <a href="/search" class="navbar-item">Search</a>
             
               <!-- Conditionally render login or logout links -->
