--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,4 +1,4 @@
-  <form>
+  <form id="form">
           <label>Keyword</label>
           <input type="text" id="keyword" title="keyword" required>
           <label>Diet</label>
