minor bulma tweeks

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -29,7 +29,7 @@
 </div>
 
 <div class="tile is-parent my-6">
-  <h3 class="is-child is-size-3 has-text-centered mx-6">
+  <h3 class="is-child is-size-3 has-text-centered mx-6" id="homepage-text">
     <span class="icon-text">
       <i class="fas fa-utensils"></i>
     </span>
