--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -41,7 +41,7 @@
       <button class="btn btn-primary" type="submit">login</button>
     </div> }}
     <div class="control">
-      <button class="button has-background-grey-light">Submit</button>
+      <button class="button has-background-grey-light mb-4">Submit</button>
     </div>
 
      <p>
