--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,6 +149,9 @@ left: 600px;
     width: 60%;
     left: 5%; 
   }
+  #homepage-text {
+    font-size: 28px;
+  }
   #allCard.columns{
     display: inline-block;
     position: relative;
@@ -237,7 +240,9 @@ left: 600px;
     text-decoration: none;
     border: none;
   }
-
+  #homepage-text {
+    font-size: 24px;
+  }
   .navbar-item {
     font-size: 16px;
   }
@@ -332,8 +337,6 @@ left: 600px;
 
 /* Small Screens, Laptops */
 
-
-
 @media screen and (min-width: 320px) and (max-width: 480px) {
   #nav-links {
     display: flex;
@@ -342,6 +345,9 @@ left: 600px;
     text-decoration: none;
     border: none;
     width: 100%;
+  }
+  #homepage-text {
+    font-size: 16px;
   }
   #form{
     display: inline-block;
